add styles to page

--- a/AllGoodEdu/Views/Categories/Index.cshtml
+++ b/AllGoodEdu/Views/Categories/Index.cshtml
@@ -1,19 +1,19 @@
 ﻿@model IEnumerable<AllGoodEdu.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Category";
 }
 
-<h1>Index</h1>
+<h1>Category</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="button">Create New</a>
 </p>
-<table class="table">
+<table class="table sortable table-hover">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                <a href="#">Name</a>
             </th>
             <th></th>
         </tr>
