--- a/AllGoodEdu/Views/Home/Index.cshtml
+++ b/AllGoodEdu/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "AllGoodEdu";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">AllGoodEdu</h1>
+    <h2>Meet your students and teachers here!</h2>
+    <p>Logo made at <a href="https://logomakr.com/" target="_blank">Logomkr</a></p>
 </div>
