--- a/AllGoodEdu/Views/Courses/Index.cshtml
+++ b/AllGoodEdu/Views/Courses/Index.cshtml
@@ -1,31 +1,31 @@
 ﻿@model IEnumerable<AllGoodEdu.Models.Course>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Courses";
 }
 
-<h1>Index</h1>
+<h1>Course</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="button">Open New Course</a>
 </p>
-<table class="table">
+<table class="table sortable table-hover">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                <a href="#">Name</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Category)
+                <a href="#">Description</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Instructor)
+                <a href="#">Price</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.description)
+                <a href="#">Category</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                <a href="#">Instructor</a>
             </th>
             <th></th>
         </tr>
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.description)
+                @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
