--- a/AllGoodEdu/wwwroot/css/site.css
+++ b/AllGoodEdu/wwwroot/css/site.css
@@ -1,6 +1,14 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+* {
+    box-sizing: border-box;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -59,8 +67,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background: #e3f2fd;
 }
 .footer {
   position: absolute;
@@ -69,3 +78,35 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.logo {
+    width: 110px;
+}
+main {
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+}
+    main h1 {
+        font-size: 64px !important;
+        font-family: 'Fredoka One', cursive;
+        color: #1875d1;
+    }
+    main h2 {
+        margin-top: 30px;
+        font-family: 'Fredoka One', cursive;
+        color: #2c3e50;
+    }
+.button {
+    display: inline-block;
+    color: #fff;
+    background: #63b4f4;
+    padding: 10px;
+    margin: 10px 0;
+}
+    .button:hover {
+        color: #63b4f4;
+        background-color: #fff;
+        text-decoration: none;
+        border: 2px solid #63b4f4;
+    }
