--- a/AllGoodEdu/Views/Courses/Index.cshtml
+++ b/AllGoodEdu/Views/Courses/Index.cshtml
@@ -5,10 +5,12 @@
 }
 
 <h1>Course</h1>
-
-<p>
-    <a asp-action="Create" class="button">Open New Course</a>
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        <a asp-action="Create" class="button">Open New Course</a>
+    </p>
+}
 <table class="table sortable table-hover">
     <thead>
         <tr>
@@ -31,29 +33,33 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Instructor.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CourseID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CourseID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CourseID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Category.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Instructor.Name)
+                </td>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.CourseID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.CourseID">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.CourseID">Delete</a>
+                    </td>
+                }
+            </tr>
+        }
     </tbody>
 </table>
